--- a/src/main/resources/pro/application.properties
+++ b/src/main/resources/pro/application.properties
@@ -1,3 +1,10 @@
+#pro
+
+logging.config=log4j2.xml
+
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
 #\u6570\u636E\u5E93\u8BBE\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
