--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -1,6 +1,6 @@
 #dev
 
-#logging.config=log4j2.xml
+#logging.config=./conf/log4j2.xml
 
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
