更换dubbo-starter,修改异常日志输出

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -45,10 +45,12 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 #DUBBO CONFIG
-spring.dubbo.appname=takefree-api
-spring.dubbo.registry=zookeeper://192.168.1.236:3181
-spring.dubbo.protocol=dubbo
-spring.dubbo.version=1.0.0
+spring.dubbo.application.name=takefree-api
+spring.dubbo.registry.address=192.168.1.236:3181,192.168.1.236:3181
+spring.dubbo.protocol.name=dubbo
+spring.dubbo.base-package=com.takefree
+spring.dubbo.consumer.retries=0
+spring.dubbo.consumer.timeout=10000
 
 token.redis.namespace=TakefreeSession-60B0
 token.redis.ttl=36000
