--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba</groupId>
+            <groupId>com.gitee.reger</groupId>
             <artifactId>spring-boot-starter-dubbo</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.7</version>
         </dependency>
 
         <dependency>
