完善目类和地区功能

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -56,3 +56,6 @@ token.redis.namespace=TakefreeSession-60B0
 token.redis.ttl=36000
 
 takefree.smsBaseUrl=https://apis.qianbao.com
+
+takefree.regioninfo.version=1
+takefree.categoryinfo.version=1
