--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -1,7 +1,8 @@
 #dev
 
 #logging.config=./conf/log4j2.xml
-management:context-path=/actuator
+management.context-path=/actuator
+spring.devtools.restart.trigger-file=.trigger
 
 #always|non_null|non_absent|non_default|non_empty
 spring.jackson.default-property-inclusion=non_empty
@@ -52,7 +53,12 @@ spring.dubbo.base-package=com.takefree
 spring.dubbo.consumer.retries=0
 spring.dubbo.consumer.timeout=10000
 
-token.redis.namespace=TakefreeSession-60B0
-token.redis.ttl=36000
+takefree.token.redis_namespace=TakefreeSession-60B0
+takefree.token.redis_ttl=36000
 
-takefree.smsBaseUrl=https://apis.qianbao.com
+takefree.sms.baseUrl=https://apis.qianbao.com
+takefree.sms.redis_namespace=TakefreeSession-60B0
+#短信验证码有效时间
+takefree.sms.redis_ttl=300
+#短信验证码最小间隔时间
+takefree.sms.inteval=120
