--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,11 @@
             <artifactId>converter-jackson</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+        	<groupId>com.easemob</groupId>
+        	<artifactId>rest-java-sdk</artifactId>
+        	<version>1.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
