环信收发消息

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -72,3 +72,4 @@ huanxin.app_name=takefree
 huanxin.grant_type=client_credentials
 huanxin.client_id=YXA6NQ1JQNAlEeeLyc8sU1ArOQ
 huanxin.client_secret=YXA6MyOn_IfnzL4VslFUNkK6hnEAgkc
+huanxin.sendmsg_url=https://a1.easemob.com/1139171123115255/takefree/messages
