--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,25 @@
         	<artifactId>rest-java-sdk</artifactId>
         	<version>1.0.5</version>
         </dependency>
+        
+	    <dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpcore</artifactId>
+		    <version>4.4.8</version>
+		</dependency>
+	  
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.3</version>
+		</dependency>
+	 
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpmime</artifactId>
+		    <version>4.5.3</version>
+		</dependency>
+        
     </dependencies>
 
     <build>
