修改token过期时间

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -10,13 +10,11 @@ spring.jackson.serialization.write_dates_as_timestamps = false
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-#\u6570\u636E\u5E93\u8BBE\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://172.28.40.203:3306/take_free
 spring.datasource.username=tf-users
 spring.datasource.password=unfamiliarWith$
-#--------------------------
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
@@ -44,13 +42,14 @@ spring.dubbo.consumer.retries=0
 spring.dubbo.consumer.timeout=10000
 
 takefree.token.redis_namespace=TakefreeSession-60B0
-takefree.token.redis_ttl=36000
+#token过期时间，单位秒
+takefree.token.redis_ttl=3600
 
 takefree.sms.baseUrl=https://apis.qianbao.com
 takefree.sms.redis_namespace=TakefreeSession-60B0
-#短信验证码有效时间
+#短信验证码有效时间，单位秒
 takefree.sms.redis_ttl=300
-#短信验证码最小间隔时间
+#短信验证码最小间隔时间，单位秒
 takefree.sms.inteval=120
 takefree.smsBaseUrl=https://apis.qianbao.com
 
