环信手机短信集成

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -42,14 +42,14 @@ spring.dubbo.consumer.retries=0
 spring.dubbo.consumer.timeout=10000
 
 takefree.token.redis_namespace=TakefreeSession-60B0
-#token过期时间，单位秒
+#tokenè¿ææ¶é´ï¼åä½ç§
 takefree.token.redis_ttl=3600
 
 takefree.sms.baseUrl=https://apis.qianbao.com
 takefree.sms.redis_namespace=TakefreeSession-60B0
-#短信验证码有效时间，单位秒
+#ç­ä¿¡éªè¯ç æææ¶é´ï¼åä½ç§
 takefree.sms.redis_ttl=300
-#短信验证码最小间隔时间，单位秒
+#ç­ä¿¡éªè¯ç æå°é´éæ¶é´ï¼åä½ç§
 takefree.sms.inteval=120
 takefree.smsBaseUrl=https://apis.qianbao.com
 
@@ -57,10 +57,26 @@ takefree.regioninfo.version=1
 takefree.categoryinfo.version=1
 takefree.picture_base_space=/public/takefree/
 
-
-huanxin.org_name=1139171123115255
+huanxin.org_name=1195170921115695
 huanxin.app_name=takefree
 huanxin.grant_type=client_credentials
-huanxin.client_id=YXA6NQ1JQNAlEeeLyc8sU1ArOQ
-huanxin.client_secret=YXA6MyOn_IfnzL4VslFUNkK6hnEAgkc
-huanxin.sendmsg_url=https://a1.easemob.com/1139171123115255/takefree/messages
+huanxin.client_id=YXA6ebEjoM6kEee5yCV8UiXOfg
+huanxin.client_secret=YXA6Rj9aZJ3sfRYeGrgVWTDFgIPljU4
+huanxin.sendmsg_url=https://a1.easemob.com/1195170921115695/takefree/messages
+
+#短信验证码有效时间
+huanxin.sms.redis_ttl=600
+#短信验证码最小间隔时间
+huanxin.sms.inteval=120
+huanxin.sms.send_url=https://sms.easemob.com/1195170921115695/takefree/sms_send/
+huanxin.sms.baseUrl=https://sms.easemob.com/1195170921115695/takefree/ 
+#Free社区
+huanxin.sms.sign=Free\u793E\u533A
+huanxin.sms.orderId=110417121112001061
+huanxin.sms.template_yanzhengma=4216916e-aca8-4802-88b4-87a4c467c0b6
+huanxin.sms.redis_namespace=TakefreeSession-60B0
+huanxin.sms.admin_username=datalj@163.com
+huanxin.sms.grant_type=password
+huanxin.sms.password=xiexiehuanxin@takefree
+huanxin.sms.admin_token_url=https://a1.easemob.com/management/token
+huanxin.sms.token_url=https://sms.easemob.com/1195170921115695/takefree/token
