短信，IM接口定义

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -42,14 +42,11 @@ spring.dubbo.consumer.retries=0
 spring.dubbo.consumer.timeout=10000
 
 takefree.token.redis_namespace=TakefreeSession-60B0
-#tokenè¿ææ¶é´ï¼åä½ç§
 takefree.token.redis_ttl=3600
 
-takefree.sms.baseUrl=https://apis.qianbao.com
-takefree.sms.redis_namespace=TakefreeSession-60B0
-#ç­ä¿¡éªè¯ç æææ¶é´ï¼åä½ç§
+takefree.captcha.redis_namespace=TakefreeSession-60B0
+takefree.captcha.redis.prefix.login=LOGIN-
 takefree.sms.redis_ttl=300
-#ç­ä¿¡éªè¯ç æå°é´éæ¶é´ï¼åä½ç§
 takefree.sms.inteval=120
 takefree.smsBaseUrl=https://apis.qianbao.com
 
@@ -73,7 +70,7 @@ huanxin.sms.baseUrl=https://sms.easemob.com/1195170921115695/takefree/
 #Free社区
 huanxin.sms.sign=Free\u793E\u533A
 huanxin.sms.orderId=110417121112001061
-huanxin.sms.template_yanzhengma=4216916e-aca8-4802-88b4-87a4c467c0b6
+sms.template.yanzhengma=4216916e-aca8-4802-88b4-87a4c467c0b6
 huanxin.sms.redis_namespace=TakefreeSession-60B0
 huanxin.sms.admin_username=datalj@163.com
 huanxin.sms.grant_type=password
