--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -44,11 +44,10 @@ spring.dubbo.consumer.timeout=10000
 takefree.token.redis_namespace=TakefreeSession-60B0
 takefree.token.redis_ttl=3600
 
-takefree.captcha.redis_namespace=TakefreeSession-60B0
+takefree.captcha.redis.namespace=TakefreeSession-60B0
+takefree.captcha.redis.ttl=300
+takefree.captcha.redis.inteval=120
 takefree.captcha.redis.prefix.login=LOGIN-
-takefree.sms.redis_ttl=300
-takefree.sms.inteval=120
-takefree.smsBaseUrl=https://apis.qianbao.com
 
 takefree.regioninfo.version=1
 takefree.categoryinfo.version=1
