--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -41,17 +41,16 @@ spring.dubbo.base-package=com.takefree
 spring.dubbo.consumer.retries=0
 spring.dubbo.consumer.timeout=10000
 
-takefree.token.redis_namespace=TakefreeSession-60B0
-takefree.token.redis_ttl=3600
-
-takefree.captcha.redis.namespace=TakefreeSession-60B0
-takefree.captcha.redis.ttl=300
-takefree.captcha.redis.inteval=120
-takefree.captcha.redis.prefix.login=LOGIN-
+takefree.redis.namespace=Takefree-3270
+takefree.token.ttl=3600
+takefree.token.redis.prefix=Session
+takefree.captcha.ttl=300
+takefree.captcha.inteval=120
+takefree.captcha.redis.prefix.login=LOGIN
+takefree.picture_base_space=/public/takefree/
 
 takefree.regioninfo.version=1
 takefree.categoryinfo.version=1
-takefree.picture_base_space=/public/takefree/
 
 huanxin.org_name=1195170921115695
 huanxin.app_name=takefree
