短信代码和配置

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -68,7 +68,7 @@ huanxin.sms.baseUrl=https://sms.easemob.com/1195170921115695/takefree/
 #Free社区
 huanxin.sms.sign=Free\u793E\u533A
 huanxin.sms.orderId=110417121112001061
-sms.template.yanzhengma=4216916e-aca8-4802-88b4-87a4c467c0b6
+huanxin.sms.template.yanzhengma=4216916e-aca8-4802-88b4-87a4c467c0b6
 huanxin.sms.redis_namespace=TakefreeSession-60B0
 huanxin.sms.admin_username=datalj@163.com
 huanxin.sms.grant_type=password
