--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -75,3 +75,18 @@ huanxin.sms.grant_type=password
 huanxin.sms.password=xiexiehuanxin@takefree
 huanxin.sms.admin_token_url=https://a1.easemob.com/management/token
 huanxin.sms.token_url=https://sms.easemob.com/1195170921115695/takefree/token
+
+
+#aliyun短信服务 
+#TakeFree社区
+aliyun.sms.sign=TakeFree\u793E\u533A
+aliyun.sms.template_yanzhengma=SMS_125021256
+aliyun.sms.defaultConnectTimeout=10000
+aliyun.sms.defaultReadTimeout=10000
+#短信API产品名称（短信产品名固定，无需修改）
+aliyun.sms.product=Dysmsapi
+aliyun.sms.domain=dysmsapi.aliyuncs.com
+aliyun.sms.accessKeyId=LTAIfGfS31jJsbGm
+aliyun.sms.accessKeySecret=SKhWTseH1oqi2kVFCU4Ac3eUpECuTL
+#初始化ascClient,暂时不支持多region（请勿修改）
+aliyun.sms.region=cn-hangzhou
