删除环信短信配置项

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -60,21 +60,21 @@ huanxin.client_secret=YXA6Rj9aZJ3sfRYeGrgVWTDFgIPljU4
 huanxin.sendmsg_url=https://a1.easemob.com/1195170921115695/takefree/messages
 
 #短信验证码有效时间
-huanxin.sms.redis_ttl=600
+#huanxin.sms.redis_ttl=600
 #短信验证码最小间隔时间
-huanxin.sms.inteval=120
-huanxin.sms.send_url=https://sms.easemob.com/1195170921115695/takefree/sms_send/
-huanxin.sms.baseUrl=https://sms.easemob.com/1195170921115695/takefree/ 
+#huanxin.sms.inteval=120
+#huanxin.sms.send_url=https://sms.easemob.com/1195170921115695/takefree/sms_send/
+#huanxin.sms.baseUrl=https://sms.easemob.com/1195170921115695/takefree/
 #Free社区
-huanxin.sms.sign=Free\u793E\u533A
-huanxin.sms.orderId=110417121112001061
-huanxin.sms.template_yanzhengma=4216916e-aca8-4802-88b4-87a4c467c0b6
-huanxin.sms.redis_namespace=TakefreeSession-60B0
-huanxin.sms.admin_username=datalj@163.com
-huanxin.sms.grant_type=password
-huanxin.sms.password=xiexiehuanxin@takefree
-huanxin.sms.admin_token_url=https://a1.easemob.com/management/token
-huanxin.sms.token_url=https://sms.easemob.com/1195170921115695/takefree/token
+#huanxin.sms.sign=Free\u793E\u533A
+#huanxin.sms.orderId=110417121112001061
+#huanxin.sms.template_yanzhengma=4216916e-aca8-4802-88b4-87a4c467c0b6
+#huanxin.sms.redis_namespace=TakefreeSession-60B0
+#huanxin.sms.admin_username=datalj@163.com
+#huanxin.sms.grant_type=password
+#huanxin.sms.password=xiexiehuanxin@takefree
+#huanxin.sms.admin_token_url=https://a1.easemob.com/management/token
+#huanxin.sms.token_url=https://sms.easemob.com/1195170921115695/takefree/token
 
 
 #aliyun短信服务 
