--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -59,24 +59,6 @@ huanxin.client_id=YXA6ebEjoM6kEee5yCV8UiXOfg
 huanxin.client_secret=YXA6Rj9aZJ3sfRYeGrgVWTDFgIPljU4
 huanxin.sendmsg_url=https://a1.easemob.com/1195170921115695/takefree/messages
 
-#短信验证码有效时间
-#huanxin.sms.redis_ttl=600
-#短信验证码最小间隔时间
-#huanxin.sms.inteval=120
-#huanxin.sms.send_url=https://sms.easemob.com/1195170921115695/takefree/sms_send/
-#huanxin.sms.baseUrl=https://sms.easemob.com/1195170921115695/takefree/
-#Free社区
-#huanxin.sms.sign=Free\u793E\u533A
-#huanxin.sms.orderId=110417121112001061
-#huanxin.sms.template_yanzhengma=4216916e-aca8-4802-88b4-87a4c467c0b6
-#huanxin.sms.redis_namespace=TakefreeSession-60B0
-#huanxin.sms.admin_username=datalj@163.com
-#huanxin.sms.grant_type=password
-#huanxin.sms.password=xiexiehuanxin@takefree
-#huanxin.sms.admin_token_url=https://a1.easemob.com/management/token
-#huanxin.sms.token_url=https://sms.easemob.com/1195170921115695/takefree/token
-
-
 #aliyun短信服务 
 #TakeFree社区
 aliyun.sms.sign=TakeFree\u793E\u533A
@@ -86,7 +68,7 @@ aliyun.sms.defaultReadTimeout=10000
 #短信API产品名称（短信产品名固定，无需修改）
 aliyun.sms.product=Dysmsapi
 aliyun.sms.domain=dysmsapi.aliyuncs.com
-aliyun.sms.accessKeyId=LTAIfGfS31jJsbGm
-aliyun.sms.accessKeySecret=SKhWTseH1oqi2kVFCU4Ac3eUpECuTL
+aliyun.sms.accessKeyId=
+aliyun.sms.accessKeySecret=
 #初始化ascClient,暂时不支持多region（请勿修改）
 aliyun.sms.region=cn-hangzhou
