--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ build/
 target/
 bin/
 dependency-reduced-pom.xml
+application-sms.properties
+application-im.properties
 
 # Eclipse Project Files
 .classpath
