--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -1,5 +1,4 @@
 #dev
-spring.profiles.active = sms,im
 
 #logging.config=./conf/log4j2.xml
 management.context-path=/actuator
@@ -52,3 +51,24 @@ takefree.picture_base_space=/public/takefree/
 
 takefree.regioninfo.version=1
 takefree.categoryinfo.version=1
+
+huanxin.org_name=1195170921115695
+huanxin.app_name=takefree
+huanxin.grant_type=client_credentials
+huanxin.client_id=YXA6ebEjoM6kEee5yCV8UiXOfg
+huanxin.client_secret=YXA6Rj9aZJ3sfRYeGrgVWTDFgIPljU4
+huanxin.sendmsg_url=https://a1.easemob.com/1195170921115695/takefree/messages
+
+#aliyun短信服务
+#TakeFree社区
+aliyun.sms.sign=TakeFree\u793E\u533A
+aliyun.sms.template_yanzhengma=SMS_125021256
+aliyun.sms.defaultConnectTimeout=10000
+aliyun.sms.defaultReadTimeout=10000
+#短信API产品名称（短信产品名固定，无需修改）
+aliyun.sms.product=Dysmsapi
+aliyun.sms.domain=dysmsapi.aliyuncs.com
+aliyun.sms.accessKeyId=
+aliyun.sms.accessKeySecret=
+#初始化ascClient,暂时不支持多region（请勿修改）
+aliyun.sms.region=cn-hangzhou
